update to don't user scss maps since rails can't handle them yet

--- a/src/scss/fastlane.scss
+++ b/src/scss/fastlane.scss
@@ -1,8 +1,10 @@
 @import "_variables";
-@import "_emojis";
 @import "_functions";
 
+// all emoji
+@import "_emoji";
 
+// basic displaying of an emoji
 .twfl {
   display: inline-block;
   height: 1em;
@@ -12,15 +14,4 @@
   background-repeat: no-repeat;
   background-position: center center;
   background-size: 1em 1em;
-}
-
-
-@each $code, $name in $emoji-map {
-  .twfl-#{$name},
-  .twfl_#{str-replace($name, "-", $replace: '_')} {
-    @if $png-fallback == true {
-      background-image: url('#{$twemoji-asset-path}#{$png-fallback-size}/#{$code}.png');
-    }
-    background-image: url('#{$twemoji-asset-path}svg/#{$code}.svg'), none;
-  }
 }
