--- a/src/scss/_functions.scss
+++ b/src/scss/_functions.scss
@@ -1,3 +1,4 @@
+// replace strings within a string
 @function str-replace($string, $search, $replace: '') {
   $index: str-index($string, $search);
 
